# carousel

./: CMakeLists.txt  HANDOFF.md  Makefile  README.md  bus.c  bus.h  main.c  net-up.sh
soem_config/soem/: ec_options.h
